--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
     "gulp-clean-css": "^2.0.10",
+    "gulp-concat": "^2.6.0",
     "gulp-htmlmin": "^2.0.0",
     "gulp-imagemin": "^3.0.1",
     "gulp-minify": "0.0.12",
