--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "madweb",
+  "name": "boilerplate-framework",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://bitbucket.org/madgoodones/madweb/"
+    "url": "https://bitbucket.org/madgoodones/boilerplate-framework"
   },
   "keywords": [
     "html5",
@@ -26,11 +26,10 @@
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
     "gulp-clean-css": "^2.0.10",
-    "gulp-concat": "^2.6.0",
     "gulp-htmlmin": "^2.0.0",
     "gulp-imagemin": "^3.0.1",
-    "gulp-minify": "0.0.12",
     "gulp-plumber": "^1.1.0",
-    "gulp-stylus": "^2.4.0"
+    "gulp-stylus": "^2.4.0",
+    "gulp-uglify": "^1.5.4"
   }
 }
