--- a/package.json
+++ b/package.json
@@ -30,6 +30,6 @@
     "gulp-imagemin": "^3.0.1",
     "gulp-plumber": "^1.1.0",
     "gulp-stylus": "^2.4.0",
-    "gulp-uglify": "^1.5.4"
+    "gulp-uglifyjs": "^0.6.2"
   }
 }
