--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-clean": "^0.3.2",
     "gulp-clean-css": "^2.0.12",
     "gulp-concat": "^2.6.0",
+    "gulp-htmlmin": "^2.0.0",
     "gulp-imagemin": "^3.0.3",
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
@@ -25,4 +26,4 @@
     "kouto-swiss": "^0.12.0",
     "rupture": "^0.6.1"
   }
-} 
+}
