--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Boilerplate",
-  "version": "2.0.0",
+  "name": "boilerplate-frontend",
+  "version": "3.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
