--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,6 @@
   ],
   "license": "ISC",
   "homepage": "https://github.com/joelsantosbr/boilerplate-frontend",
-  "private": true,
   "ignore": [
     "**/.*",
     "node_modules",
@@ -16,8 +15,7 @@
     "test",
     "tests"
   ],
-  "dependencies": {
-    "jquery-form": "^4.2.1",
-    "jquery": "^3.1.1"
+  "devDependencies": {
+    "jquery": "^3.2.1",
   }
 }
